# BackendMemorex

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  db.sqlite3  manage.py  openapi.json  pyproject.toml  requirements.txt  run  setup.cfg
_scripts/: install.sh  validate.sh
core/: filters.py  utils.py
core/testing/: cases.py
imageApp/: api.py  models.py
image_uploader/: api.py  apps.py
memorex/: api.py  asgi.py  constants.py  settings.py  urls.py  wsgi.py
politician/: api.py  constants.py  models.py
politician/migrations/: 0001_initial.py
politician/schemas/: common.py  payload.py  response.py
politician/tests/: cases.py  factories.py  test_api.py
post/: api.py  constants.py  models.py
post/migrations/: 0001_initial.py
post/schemas/: common.py  payload.py  response.py
post/tests/: cases.py  factories.py  test_api.py
user/: api.py  bearers.py  constants.py  factories.py  models.py
user/migrations/: 0001_initial.py
user/schemas/: payload.py  response.py
user/tests/: cases.py  factories.py  test_api.py
